# Rib-Cage

./: CMakeLists.txt  README.md  RoadMap.txt
Data/ImportedModels/: heli.glb  test.gltf  testTree.glb
Data/SkeletonData/: Test.skl
Include/: AABBTree.h  ClothSim.h  Collisions.h  DebugTools.h  GltfTestScene.h  HairTestScene.h  PhysicsTestScene.h  RibCage.h  SceneElement.h  SimpleObjLoader.h  Skeleton.h  StridedView.h
Shaders/: Bone.vert  Common.glsl  DeferredPass.frag  Floor.vert  GBufferPassThrough.frag  SelectableVertex.frag  SelectableVertex.vert  TranslateGizmo.vert
Shaders/BVH/: AABBWireframe.vert  BVHCommon.glsl
Shaders/Cloth/: Cloth.vert  ClothCommon.glsl
Shaders/Debug/: DebugCommon.glsl  DebugLine.vert
Shaders/Gltf/: Gltf.frag  Gltf.vert
Src/: AABBTree.cpp  ClothSim.cpp  Collisions.cpp  DebugTools.cpp  GltfTestScene.cpp  HairTestScene.cpp  PhysicsTestScene.cpp  RibCage.cpp  SimpleObjLoader.cpp  Skeleton.cpp  main.cpp
